lvl_junior/administrator-kubernetes-junior/07_Lifehacks/077-step6/03_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-http-server
  namespace: debug-6
spec:
  strategy: 
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: go-http-server
  template:
    metadata:
      labels:
        app: go-http-server
    spec:
      containers:
      - name: server
        image: bdv21/http-server:0.0.2
        ports:
        - containerPort: 8080
          name: web
        resources:
          requests:
            cpu: "100m"        
            memory: "128Mi"   
          limits:
            cpu: "250m"        
            memory: "256Mi"
